set ld_library_path before calling xulrunner -v